turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
            case 1 => avance();
                 ^Turmite:14: error: type mismatch;
 found   : Int(2)
 required: Array[Int]
            case 2 => gauche();avance();
                 ^Turmite:15: error: type mismatch;
 found   : Int(4)
 required: Array[Int]
            case 4 => gauche();gauche();avance();
                 ^Turmite:16: error: type mismatch;
 found   : Int(8)
 required: Array[Int]
            case 8 => droite();avance();
                 ^